# code

./: .gitignore  README.md  code.sln  git_commit.sh
JS/: mailer.js  product_bought_brand_fbeta.csv  product_bought_flavor_fbeta.csv  product_bought_healthy_fbeta.csv
R/: anova-example.R  tidyverse-playground.R  xgboost.R
bash/: atifan.sh  file_in_list.sh  g15daemon  install_pi.sh
c/: dummy.c  dummy.h
cpp/: 1getline-exercise.cpp  1sales.cpp  2read-unknown-number-of-strings.cpp  2scope.cpp  32string-functions.cpp  33vectors.cpp  34iterator.cpp  35bitset.cpp  35fibonacci-bitset-fun.cpp  42pointer-loop.cpp  42pointers.cpp  43c-style-strings.cpp  44arrays.cpp  52logic-evaluation.cpp  53bitwise-operators.cpp  53quiz-representation.cpp  54assignment-operators.cpp  55pre-and-postfix.cpp  Makefile  dummy.cpp  exercise-109.cpp  exercise-110.cpp  exercise-111.cpp  exercise-112.cpp  exercise-113.cpp  exercise-118.cpp  exercise-212.cpp  exercise-219.cpp  exercise-221.cpp  exercise-224.cpp  exercise-234.cpp  exercise-31.cpp  exercise-310.cpp  exercise-311.cpp  exercise-313.cpp  exercise-313b.cpp  exercise-314.cpp  exercise-322.cpp  exercise-35.cpp  exercise-36.cpp  (+13 more)
cs/: hints.txt
go/: constants.go  for.go  primes.go
hubs/: learning-rooms.pack  seminar-rooms.pack
javascripting/: for-loop.js  if-statement.js
perl/: rename.PL
python/: Kolmogorov–Smirnov_test.ipynb  api_consume_example.py  api_flask_example.py  async-asincio-example.py  cat.txt  (+94 more)
rust/fibonaccitest/: Cargo.toml
rust/fibonaccitest/benches/: my_benchmark.rs
rust/fibonaccitest/src/: fibo.rs  main.rs
(+616 files in other folders)
